# ExtIO_sddc

./: CMakeLists.txt
.github/workflows/: cmake.yml  lastest.yml
Core/: CMakeLists.txt  RadioHandler.cpp  RadioHandler.h  RadioHardware.h  config.h
Core/dsp/: calculator.h  converter.h  freqConverter.h  freqShifter.h  rinbuffer.h  ringbuffer.h  signalparameters.h
Core/radio/: BBRF103Radio.cpp  HF103Radio.cpp  RX888R2Radio.cpp  RX888Radio.cpp  RX999Radio.cpp  RadioHardware.cpp
Core/unittest/: CMakeLists.txt  calculator_test.cpp  freqconverter_test.cpp  ringbuffer_test.cpp  signalparameters_test.cpp
ExtIO_sddc/: ExtIO_sddc.cpp
SDDC_FX3/: rx999.c
libsddc/: libsddc.cpp
unittest/: calculator_test.cpp  freqshifter_test.cpp
